--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,10 +1,6 @@
 <nav>
   <div class="nav-center">
-    <a class="app-name" [routerLink]="['']">
-      <h3 [ngClass]="{ red: isBoldTitle }">Posts</h3></a
-    >
-    <mat-icon class="list-icon" [routerLink]="['']">
-      list </mat-icon
-    >
+    <a class="app-name"> <h3 [ngClass]="{ red: isBoldTitle }">Posts</h3></a>
+    <mat-icon class="list-icon"> list </mat-icon>
   </div>
 </nav>
